# orderbook-cpp

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md
examples/: script.txt  script_features.txt
src/: command.h  engine.cpp  engine.h  event.h  event_io.cpp  event_io.h  main.cpp  order.h  order_book.cpp  order_book.h  script.cpp  script.h
tests/: test_engine.cpp  test_order_book.cpp
